Fix navbar overlap issue

--- a/frontend/assets/styles/main.scss
+++ b/frontend/assets/styles/main.scss
@@ -2,4 +2,5 @@
 
 body {
     background-color: #E7FEED;
+    padding-bottom: 70px;
 }
